--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
   <!-- preloader intro -->
 
   <!-- SIDEBAR LARGE DEVICES -->
-  <div class="sidebar">
-    <div class="sidebar__wrap">
-      <a href="./shop.html" class="sb-achr-1">
-        <div class="sidebar__drawer drwr-1">
-          <div class="sidebar__link">shop</div>
-          <div class="sidebar__link sidebar__link-copy">shop</div>
-        </div>
-      </a>
-      <a href="./collections.html" class="sb-achr-2">
-        <div class="sidebar__drawer drwr-2">
-          <div class="sidebar__link">collections</div>
-          <div class="sidebar__link sidebar__link-copy">collections</div>
-        </div>
-      </a>
-      <a href="./about.html" class="sb-achr-3">
-        <div class="sidebar__drawer drwr-3">
-          <div class="sidebar__link">about</div>
-          <div class="sidebar__link sidebar__link-copy">about</div>
-        </div>
-      </a>
-    </div>
-  </div>
+<!--  <div class="sidebar">-->
+<!--    <div class="sidebar__wrap">-->
+<!--      <a href="./shop.html" class="sb-achr-1">-->
+<!--        <div class="sidebar__drawer drwr-1">-->
+<!--          <div class="sidebar__link">shop</div>-->
+<!--          <div class="sidebar__link sidebar__link-copy">shop</div>-->
+<!--        </div>-->
+<!--      </a>-->
+<!--      <a href="./collections.html" class="sb-achr-2">-->
+<!--        <div class="sidebar__drawer drwr-2">-->
+<!--          <div class="sidebar__link">collections</div>-->
+<!--          <div class="sidebar__link sidebar__link-copy">collections</div>-->
+<!--        </div>-->
+<!--      </a>-->
+<!--      <a href="./about.html" class="sb-achr-3">-->
+<!--        <div class="sidebar__drawer drwr-3">-->
+<!--          <div class="sidebar__link">about</div>-->
+<!--          <div class="sidebar__link sidebar__link-copy">about</div>-->
+<!--        </div>-->
+<!--      </a>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <!-- NAVIGATION MOBILE SCREEEN -->
   <nav class="navbar-mobile">
@@ -190,8 +190,8 @@
         <a href="index.html" class="name-app-link-xl">
           <div class="logo-name-p1">
             <div class="logo-name-p2">
-              <img src="./svg/nameApp.svg" alt="name-app" class="logo-name-app-xl" />
-              <img src="./svg/nameApp.svg" alt="name-app" class="logo-name-app-xl" />
+<!--              <img src="./svg/nameApp.svg" alt="name-app" class="logo-name-app-xl" />-->
+<!--              <img src="./svg/nameApp.svg" alt="name-app" class="logo-name-app-xl" />-->
             </div>
           </div>
         </a>
